--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ CS_161/module4/fallDistance
 CS_161/module4/hailstone
 CS_161/module4/smallSort
 CS_161/module5/box
+CS_161/module6/linesegment
+CS_161/module6/point
+CS_161/module7/findMode
