- Lab Aa source files

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ CS_161/module6/point
 CS_161/module7/findMode
 CS_161/module9/tictactoe
 CS_161/module10/library
+CS_162/lab_aa/lab1-1
+CS_162/lab_aa/lab1-2
