--- a/CS_162/lab_aa/Makefile
+++ b/CS_162/lab_aa/Makefile
@@ -2,10 +2,14 @@
 
 # Lab Aa makefile
 
-all : average
+all : lab1-1 lab1-2
 
-average : summation.cpp
-	g++ summation.cpp -o average
+lab1-1 : average.cpp summation.cpp lab1-1.cpp
+	g++ average.cpp summation.cpp lab1-1.cpp -lncurses -o lab1-1
+
+lab1-2 : summation.cpp lab1-2.cpp
+	g++ summation.cpp lab1-2.cpp -lncurses -o lab1-2
 
 clean :
-	rm average
+	rm -f lab1-1
+	rm -f lab1-2
