- Add comments and split dice.cpp into dice.cpp/loadeddice.cpp

--- a/CS_162/lab_b/Makefile
+++ b/CS_162/lab_b/Makefile
@@ -4,8 +4,8 @@
 
 all : lab-b
 
-lab-b: dice.cpp diceMain.cpp lib_flip_display.cpp
-	g++ diceMain.cpp dice.cpp lib_flip_display.cpp -g -o lab-b
+lab-b: dice.cpp loadeddice.cpp diceMain.cpp lib_flip_display.cpp
+	g++ diceMain.cpp loadeddice.cpp dice.cpp lib_flip_display.cpp -g -o lab-b
 
 clean :
 	rm -f lab-b
