- Fix build break

--- a/CS_162/assignment2/Makefile
+++ b/CS_162/assignment2/Makefile
@@ -4,8 +4,8 @@
 
 all : assignment2
 
-assignment2 : critter.cpp critterDoodlebug.cpp critterAnt.cpp assignment2.cpp
-	gcc critter.cpp critterDoodlebug.cpp critterAnt.cpp assignment2.cpp lib_flip_display.cpp -g -o assignment2
+assignment2 : critter.cpp critterDoodleBug.cpp critterAnt.cpp assignment2.cpp
+	g++ critter.cpp critterDoodleBug.cpp critterAnt.cpp assignment2.cpp lib_flip_display.cpp -g -o assignment2
 
 clean :
 	rm -f assignment2
