- Rename some stuff

--- a/CS_162/assignment2/Makefile
+++ b/CS_162/assignment2/Makefile
@@ -5,7 +5,7 @@
 all : assignment2
 
 assignment2 : critter.cpp critterDoodleBug.cpp critterAnt.cpp assignment2.cpp
-	g++ critter.cpp critterDoodleBug.cpp critterAnt.cpp assignment2.cpp lib_flip_display.cpp -g -o assignment2
+	g++ critter.cpp critterDoodleBug.cpp critterAnt.cpp assignment2.cpp lib_flip_display.cpp -g -std=c++11 -o assignment2
 
 clean :
 	rm -f assignment2
