- Finish implementation lab-d

--- a/CS_162/lab_d/Makefile
+++ b/CS_162/lab_d/Makefile
@@ -4,8 +4,8 @@
 
 all : lab-d
 
-lab-c : lab-d.cpp lib_flip_display.cpp
-	g++ lab-d.cpp lib_flip_display.cpp -g -std=c++11 -o lab-d
+lab-d : lab-d.cpp copy.cpp encryption.cpp toupper.cpp transformer.cpp orderedoutput.cpp lib_flip_display.cpp
+	g++ lab-d.cpp copy.cpp encryption.cpp toupper.cpp transformer.cpp orderedoutput.cpp lib_flip_display.cpp -g -std=c++11 -o lab-d
 
 clean :
 	rm -f lab-d
