- Final edits for lab-d/lab-ab. Create tar.gz file for labs

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ CS_161/module9/tictactoe
 CS_161/module10/library
 CS_162/lab_aa/lab1-1
 CS_162/lab_aa/lab1-2
+CS_162/lab_b/lab-b
+CS_162/lab_c/lab-c
+CS_162/lab_d/lab-d
