--- a/CS_162/lab_e/Makefile
+++ b/CS_162/lab_e/Makefile
@@ -4,8 +4,8 @@
 
 all : lab-e
 
-lab-e : lab-e.cpp lib_flip_display.cpp node.cpp
-	g++ lab-e.cpp lib_flip_display.cpp node.cpp -g -std=c++11 -o lab-e
+lab-e : lab-e.cpp lib_flip_display.cpp node.cpp nodeController.cpp
+	g++ lab-e.cpp lib_flip_display.cpp node.cpp nodeController.cpp -g -std=c++11 -o lab-e
 
 clean :
 	rm -f lab-e
