--- a/CS_162/assignment3/Makefile
+++ b/CS_162/assignment3/Makefile
@@ -4,11 +4,11 @@
 
 all : assignment3
 
-assignment3 : arg_parse.cpp characterBase.cpp characterGollum.cpp characterMedusa.cpp dice.cpp \
+assignment3 : lib_arg_parse.cpp characterBase.cpp characterGollum.cpp characterMedusa.cpp dice.cpp \
               lib_flip_display.cpp assignment3.cpp  characterBlueMen.cpp  characterHarryPotter.cpp \
 							characterReptilePeople.cpp  diceCombo.cpp
 
-	g++ arg_parse.cpp characterBase.cpp characterGollum.cpp characterMedusa.cpp dice.cpp \
+	g++ lib_arg_parse.cpp characterBase.cpp characterGollum.cpp characterMedusa.cpp dice.cpp \
 	              lib_flip_display.cpp assignment3.cpp  characterBlueMen.cpp  characterHarryPotter.cpp \
 								characterReptilePeople.cpp  diceCombo.cpp -g -std=c++11 -o assignment3
 
