--- a/CS_162/lab_f/Makefile
+++ b/CS_162/lab_f/Makefile
@@ -4,9 +4,9 @@
 
 all : lab_f
 
-lab_f : lib_arg_parse.cpp lib_flip_display.cpp lab_f.cpp queue.cpp stack.cpp
+lab_f : lib_arg_parse.cpp lib_flip_display.cpp lab_f.cpp
 
-	g++ lib_arg_parse.cpp lib_flip_display.cpp lab_f.cpp queue.cpp stack.cpp -g -std=c++11 -o lab-f
+	g++ lib_arg_parse.cpp lib_flip_display.cpp lab_f.cpp -g -std=c++11 -o lab-f
 
 clean :
 	rm -f lab-f
