--- a/CS_162/final/Makefile
+++ b/CS_162/final/Makefile
@@ -4,9 +4,11 @@
 
 all : final
 
-final : lib_arg_parse.cpp lib_flip_display.cpp lab_f.cpp
+final : final.cpp  gameObject.cpp  gameObjects.cpp  gamePlayer.cpp  gameSpace.cpp  gameSpaceController.cpp \
+        lib_arg_parse.cpp  lib_flip_display.cpp
 
-	g++ lib_arg_parse.cpp lib_flip_display.cpp lab_f.cpp -g -std=c++11 -o final
+	g++ final.cpp  gameObject.cpp  gameObjects.cpp  gamePlayer.cpp  gameSpace.cpp  gameSpaceController.cpp \
+	lib_arg_parse.cpp  lib_flip_display.cpp -g -std=c++11 -o final
 
 clean :
 	rm -f final
