--- a/CS_162/final/Makefile
+++ b/CS_162/final/Makefile
@@ -5,10 +5,10 @@
 all : final
 
 final : final.cpp  gameObject.cpp  gameObjects.cpp  gamePlayer.cpp  gameSpace.cpp  gameSpaceController.cpp \
-        lib_arg_parse.cpp  lib_flip_display.cpp
+        gameState.cpp gameSpaces.cpp lib_arg_parse.cpp  lib_flip_display.cpp
 
 	g++ final.cpp  gameObject.cpp  gameObjects.cpp  gamePlayer.cpp  gameSpace.cpp  gameSpaceController.cpp \
-	lib_arg_parse.cpp  lib_flip_display.cpp -g -std=c++11 -o final
+	gameState.cpp gameSpaces.cpp lib_arg_parse.cpp  lib_flip_display.cpp -g -std=c++11 -o final
 
 clean :
 	rm -f final
