--- a/CS_162/lab_g/Makefile
+++ b/CS_162/lab_g/Makefile
@@ -4,9 +4,9 @@
 
 all : lab_g
 
-lab_g : lib_arg_parse.cpp lib_flip_display.cpp lab_g.cpp
+lab_g : lib_arg_parse.cpp lib_flip_display.cpp lab_g.cpp fileLoader.cpp
 
-	g++ lib_arg_parse.cpp lib_flip_display.cpp lab_g.cpp -g -std=c++11 -o lab-g
+	g++ lib_arg_parse.cpp lib_flip_display.cpp lab_g.cpp fileLoader.cpp -g -std=c++11 -o lab-g
 
 clean :
 	rm -f lab-g
