--- a/CS_162/lab_fb/Makefile
+++ b/CS_162/lab_fb/Makefile
@@ -2,7 +2,7 @@
 
 # Lab Fb makefile
 
-sources_test = lib_arg_parse.cpp lib_flip_display.cpp lab_fb_test.cpp Stack.cpp
+sources_test = lib_arg_parse.cpp lib_flip_display.cpp lab_fb_test.cpp Queue.cpp Stack.cpp
 sources      = lib_arg_parse.cpp lib_flip_display.cpp lab_fb.cpp calculator.cpp Stack.cpp
 
 all : lab_fb_test lab_fb
