- CS 261 Assignment 6 final work

--- a/CS_261/assignment_6/makefile
+++ b/CS_261/assignment_6/makefile
@@ -4,13 +4,13 @@ CFLAGS = -g -Wall -std=c99
 all : tests prog
 
 prog : main.o hashMap.o
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -pg -o $@ $^
 
 tests : tests.o hashMap.o CuTest.o
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -pg -o $@ $^
 
 spellChecker : spellChecker.o hashMap.o
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -pg -o $@ $^
 
 main.o : main.c hashMap.h
 
