--- a/CS_290/package.json
+++ b/CS_290/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.0",
     "pug": "^2.0.0-beta11"
   }
