--- a/CS_475/project1/Makefile
+++ b/CS_475/project1/Makefile
@@ -1,7 +1,7 @@
 all : cs_475_project_1
 
-cs_475_project_1 : project1.cpp curve_calc.cpp
-	g++ -o project1 project1.cpp curve_calc.cpp -O3 -lm -fopenmp -DNUMT=$(NUMT) -DNUMNODES=$(NUMNODES)
+cs_475_project_1 : project1.cpp curve_calc.cpp csv_logger.cpp
+	g++ -o project1 project1.cpp curve_calc.cpp csv_logger.cpp -O3 -lm -fopenmp -DNUMT=$(NUMT) -DNUMNODES=$(NUMNODES)
 
 clean :
 	rm -f project1
