--- a/CS_475/project2/CMakeLists.txt
+++ b/CS_475/project2/CMakeLists.txt
@@ -18,7 +18,7 @@ set(PROJECT_SRCS
 )
 
 # Compilier settings
-set(CMAKE_CXX_FLAGS "-lm -fopenmp")
+set(CMAKE_CXX_FLAGS "-O0 -lm -fopenmp")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/local/include -L/usr/local/lib")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
