- CS 475 Project 6 work

--- a/CS_475/project6/CMakeLists.txt
+++ b/CS_475/project6/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required (VERSION 2.8.11)
 
-set (PROJ_NAME cs475-project5)
+set (PROJ_NAME cs475-project6)
 
 project (${PROJ_NAME})
 
 # Add include folders
 include_directories("${PROJECT_SOURCE_DIR}/include")
 include_directories("${PROJECT_SOURCE_DIR}/platform/include")
+
+find_package(OpenCL REQUIRED)
+find_package(OpenMP REQUIRED)
+
+include_directories("${OpenCL_INCLUDE_DIR}")
+include_directories("${OpenCL_INCLUDE_DIR}")
 
 set(PLATFORM_SRCS
   ${PROJECT_SOURCE_DIR}/platform/src/CSVLogger.cpp
@@ -19,7 +25,7 @@ set(PROJECT_SRCS
 )
 
 # Compilier settings
-set(CMAKE_CXX_FLAGS "-O0 -lm -fopenmp")
+set(CMAKE_CXX_FLAGS "-O0 -lm ${OpenMP_CXX_FLAGS}")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/local/include -L/usr/local/lib")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
@@ -29,3 +35,4 @@ set(CMAKE_CXX_FLAGS "-O0 -lm -fopenmp")
 #add_definitions(-DNUMNODES=${NUMNODES})
 
 add_executable(${PROJ_NAME} ${PLATFORM_SRCS} ${PROJECT_SRCS})
+target_link_libraries(${PROJ_NAME} "${OpenCL_LIBRARIES}")
