- CS 475 Project 7a refactor complete

--- a/CS_475/project7a/NewVS2015B.vcxproj.filters
+++ b/CS_475/project7a/NewVS2015B.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\Project7a.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticlePhysics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\particles.cl">
