--- a/CS_475/project7a/NewVS2015B.vcxproj
+++ b/CS_475/project7a/NewVS2015B.vcxproj
@@ -72,8 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Jeremy\src\osu\CS_475\project7a\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Jeremy\src\osu\CS_475\project7a\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(MSBuildProjectDirectory)/include;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v8.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(MSBuildProjectDirectory)/lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ParticlePhysics.cpp" />
     <ClCompile Include="src\OpenCL.cpp" />
     <ClCompile Include="src\OpenGLRender.cpp" />
     <ClCompile Include="src\ParticleSystem.cpp" />
