- CS 475 Project 7a wor

--- a/CS_475/project7a/NewVS2015B.vcxproj
+++ b/CS_475/project7a/NewVS2015B.vcxproj
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ParticleMath.cpp" />
     <ClCompile Include="ParticlePhysics.cpp" />
     <ClCompile Include="src\OpenCL.cpp" />
     <ClCompile Include="src\OpenGLRender.cpp" />
