--- a/CS_475/project7a/NewVS2015B.vcxproj.filters
+++ b/CS_475/project7a/NewVS2015B.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="ParticlePhysics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParticleMath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\particles.cl">
