--- a/CS_325/hw3/CMakeLists.txt
+++ b/CS_325/hw3/CMakeLists.txt
@@ -19,7 +19,7 @@ set(PROJECT_SRCS
 )
 
 # Compilier settings
-set(CMAKE_CXX_FLAGS "-O0 -lm ${OpenMP_CXX_FLAGS} -DDEBUG -g")
+set(CMAKE_CXX_FLAGS "-std=c++11 -O0 -lm ${OpenMP_CXX_FLAGS} -DDEBUG -g")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/local/include -L/usr/local/lib")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
