- CS 344 - Assignment 4 - Refactor client server code into modules. - Encryption complete.

--- a/CS_344/assignment4/src/otp_enc/CMakeLists.txt
+++ b/CS_344/assignment4/src/otp_enc/CMakeLists.txt
@@ -13,6 +13,8 @@ include_directories("${PROJECT_SOURCE_DIR}/../common")
 # Source Files
 set(OTP_ENC_SRC
   ${PROJECT_SOURCE_DIR}/otp_enc.c
+  ${PROJECT_SOURCE_DIR}/../common/common.c
+  ${PROJECT_SOURCE_DIR}/../common/common_client.c
 )
 
 # Define the output executable
