--- a/CS_496/assignment3/server/package.json
+++ b/CS_496/assignment3/server/package.json
@@ -15,6 +15,7 @@
     "guid": "0.0.12",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "xmlhttprequest": "^1.8.0"
   }
 }
