--- a/CS_496/assignment3/server/package.json
+++ b/CS_496/assignment3/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "BoatsandSlips",
+  "name": "OlafsDoughtnut",
   "version": "1.0.0",
-  "description": "Boats and Slips Server",
+  "description": "Olafs Doughnut OAuth2",
   "main": "server.js",
   "scripts": {
     "start": "node ./server.js"
@@ -12,9 +12,6 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.16.1",
     "express": "^4.14.0",
-    "guid": "0.0.12",
-    "mongodb": "^3.0.1",
-    "mongoose": "^4.13.9",
     "pug": "^2.0.0-rc.4"
   }
 }
