--- a/CS_496/CoolPix/android/app/src/main/AndroidManifest.xml
+++ b/CS_496/CoolPix/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.osu.praterj.coolpix">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AuthCompleteActivity"></activity>
+        <activity android:name=".AuthCompleteActivity" />
+        <activity android:name=".AddNewPostActivity"></activity>
     </application>
 
 </manifest>
