--- a/CS_496/CoolPix/android/app/src/main/AndroidManifest.xml
+++ b/CS_496/CoolPix/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.osu.praterj.coolpix">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AuthCompleteActivity" />
-        <activity android:name=".AddNewPostActivity"></activity>
+        <activity android:name=".AddNewPostActivity" />
+        <activity android:name=".EditPostActivity"></activity>
     </application>
 
 </manifest>
